2010-10-23  Glenn Morris  <rgm@gnu.org>

	* comint-testsuite.el
	(comint-testsuite--test-comint-password-prompt-regexp): Add
	"Please enter the password".  (Bug#7224)

2010-09-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* indent/prolog.prolog: Use normal spacing around !.

2010-09-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* indent/octave.m: Remove one more `fixindent'.  Use `end'.

2010-09-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* indent/octave.m: Remove some `fixindent' not needed any more.

2010-08-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* indent/octave.m: New file.

2010-08-08  Ulf Jasper  <ulf.jasper@web.de>

	* icalendar-testsuite.el (icalendar-testsuite-run): Add internal tests.
	(icalendar-testsuite--trim, icalendar-testsuite--compare-strings)
	(icalendar-testsuite--run-internal-tests): New.
	(icalendar-testsuite--test-convert-ordinary-to-ical)
	(icalendar-testsuite--test-convert-block-to-ical)
	(icalendar-testsuite--test-convert-anniversary-to-ical)
	(icalendar-testsuite--test-parse-vtimezone)
	(icalendar-testsuite--do-test-export): Code formatting.
	(icalendar-testsuite--test-parse-vtimezone): Doc fix.
	(icalendar-testsuite--do-test-import)
	(icalendar-testsuite--do-test-cycle):
	Use icalendar-testsuite--compare-strings
	(icalendar-testsuite--run-import-tests): Comment added.
	(icalendar-testsuite--run-import-tests)
	(icalendar-testsuite--run-real-world-tests): Fix expected results.

2010-06-25  Chong Yidong  <cyd@stupidchicken.com>

	* redisplay-testsuite.el (test-redisplay-3): New test.

2010-06-11  Chong Yidong  <cyd@stupidchicken.com>

	* comint-testsuite.el: New file.

2010-06-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* indent: New dir.

2010-05-07  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.2 released.

2010-03-29  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/semantic-ia-utest.el
	(semantic-symref-test-count-hits-in-tag): Add function, from
	semantic-test.el.

	* cedet/tests/test.cpp: